cmake_minimum_required(VERSION 3.8)
project(LeetCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Couples_Holding_Hands Couples_Holding_Hands.cpp)
add_executable(Two_Sum Two_Sum.cpp)
add_executable(Minimum_Size_Subarray_Sum Minimum_Size_Subarray_Sum.cpp)
add_executable(Single_Element_in_a_Sorted_Array Single_Element_in_a_Sorted_Array.cpp)
